Closed Bug 21230 Opened 25 years ago Closed 25 years ago

[Dogfood][Regression] AB Card data not saved

Categories

(SeaMonkey :: MailNews: Address Book & Contacts, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: hangas, Assigned: chuang)

Details

(Whiteboard: [PDT+])

Data entered into an Address Book Card is no longer being saved.  The data
appears to remain for a session, but when mozilla is quit the data is lost.

To produce:
1) Bring up the Address Book window
2) Select a card in the Personal Address Book
3) Click the Edit button
4) Change any field, or add data to a blank field
5) Click the OK button
6) Quit mozilla
7) Relaunch mozilla
8) Bring up the Address Book window
9) Select the same card in the Personal Address Book
10) Click the Edit button

Result: The changes to this card have been lost
Whiteboard: [PDT+]
Putting on PDT+ radar.
QA Contact: lchiang → esther
My guess would be that the address book database is not getting commited. I'll
look into it.
OK, we're doing a small commit (which doesn't do anything with mork) but never
doing a large or session commit. I would recommend changing NS_IMETHODIMP
nsAbCardProperty::EditCardToDatabase(const char *uri)

to do a kLargeCommit instead of a kSmallCommit. That will fix this problem, and
prevent other data loss.
Status: NEW → ASSIGNED
I don't think it's a regression in address book since address book BE code
hasn't change for a while.  Either other part of code change to break
it or it's an existing bug that has never been discovered.  I'll take Bienvenu's
fix since it's just one line code change and it does fix the problem.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Fix checked in mailnews/addrbook/nsAbProperty.cpp (rev 1.19)
Status: RESOLVED → VERIFIED
Using win32 build 1999121009m12 and build 1999121008 on mac and linux this is
fixed.  verified.
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.