PDT+Bug 21230 Change in Edit AB Card not saved to address book database.  r=bienvenu, a=chofmann.